Changed the icon

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather Report</title>
-  <link rel="icon" href="weather_bc.jpg">
+  <link rel="icon" href="https://static.meteoblue.com/assets/images/picto/16_iday.svg">
 </head>
 <body>
   <div id="root"></div>
